<resources>
    <string name="app_name">Festas e Eventos</string>
    <string name="stringBtnFesta">Fazer minha festa</string>
    <string name="stringBtnOferecerServico">Oferecer serviços/produtos</string>
    <string name="stringBtnVideo">Vídeo explicativo</string>
    <string name="stringDescricao">Imagem de fundo</string>
    <string name="stringTextoPrincipal">Olá</string>
    <string name="stringTextoPrincipal2">O que você deseja?</string>
    <string name="menu_cadastrar">Cadastrar</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">Ok</string>
    <string name="local_da_festa">Local da festa</string>
    <string name="data">Data</string>
    <string name="quantidade_de_convidados">Quantidade de convidados</string>
    <string name="classifica_o_da_sua_festa">Classificação da sua festa</string>
</resources>
